--- a/proxy/conf.d/99-default.conf
+++ b/proxy/conf.d/99-default.conf
@@ -66,7 +66,7 @@ server {
         proxy_cache_lock_timeout 160s;
         proxy_cache_background_update on;
         proxy_cache_min_uses 2;
-        proxy_cache static_zone;
+        proxy_cache html_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
         proxy_pass http://siren;
@@ -92,7 +92,7 @@ server {
         proxy_cache_lock_timeout 160s;
         proxy_cache_background_update on;
         proxy_cache_min_uses 2;
-        proxy_cache static_zone;
+        proxy_cache html_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
         proxy_pass http://siren;
