--- a/proxy/conf.d/99-digitalocean.conf
+++ b/proxy/conf.d/99-digitalocean.conf
@@ -4,7 +4,7 @@ server {
 
   location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
     expires 1M;
-    add_header X-Proxy-name "1-do1-static";
+    add_header X-Proxy-name "do1-static";
     #access_log off;
     access_log /var/log/nginx/do1-static.log upstream_stat;
     # max-age must be in seconds
