--- a/proxy/conf.d/99-cdn32.conf
+++ b/proxy/conf.d/99-cdn32.conf
@@ -18,7 +18,7 @@ server {
     proxy_cache_min_uses 1;
     proxy_cache static_zone;
     add_header X-Proxy-Cache $upstream_cache_status;
-    include proxy_params;
+    include include/proxy_params.conf;
     proxy_pass http://do1;
   }
 
