--- a/proxy/conf.d/99-vbalancer.conf
+++ b/proxy/conf.d/99-vbalancer.conf
@@ -5,6 +5,7 @@ server {
   location / {
     access_log /var/log/nginx/vbalancer.log upstream_stat;
     add_header X-Proxy-name "siren-vbalancer" always;
+    proxy_read_timeout 3600;
     proxy_read_timeout 20;
     include include/proxy_params.conf;
     proxy_pass http://siren;
