--- a/proxy/conf.d/99-vbalancer.conf
+++ b/proxy/conf.d/99-vbalancer.conf
@@ -10,4 +10,25 @@ server {
     proxy_pass http://siren;
   }
 
+  location /tmdb {
+    expires 10m;
+    add_header X-Proxy-name "siren-vbalancer-tmdb" always;
+    #access_log off;
+    access_log /var/log/nginx/vbalancer-tmdb.log upstream_stat;
+    # max-age must be in seconds
+    proxy_cache_key "$uri$is_args$args";
+    add_header Cache-Control "max-age=600, public";
+    proxy_cache_valid 200 10m;
+    proxy_cache_valid 404 1m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 60s;
+    proxy_cache_background_update on;
+    proxy_cache_min_uses 1;
+    proxy_cache static_zone;
+    add_header X-Proxy-Cache $upstream_cache_status;
+    include include/proxy_params.conf;
+    proxy_pass http://siren;
+}
+
 }
