--- a/proxy/conf.d/99-vbalancer.conf
+++ b/proxy/conf.d/99-vbalancer.conf
@@ -18,7 +18,7 @@ server {
     # max-age must be in seconds
     proxy_cache_key "$uri$is_args$args";
     #add_header Cache-Control "max-age=600, public";
-    proxy_cache_valid 200 24H;
+    proxy_cache_valid 200 24h;
     proxy_cache_valid 404 1m;
     proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
     proxy_cache_lock on;
