--- a/proxy/conf.d/99-cdn32.conf
+++ b/proxy/conf.d/99-cdn32.conf
@@ -4,20 +4,19 @@ server {
 
   location / {
     add_header X-Proxy-name "siren-cdn32" always;
-    # expires 1M;
+    expires 1M;
     #access_log off;
     access_log /var/log/nginx/cdn32.log upstream_stat;
-    # max-age must be in seconds
-    # add_header Cache-Control "max-age=2629746, public";
-    # proxy_cache_valid 200 999h;
-    # proxy_cache_valid 404 1m;
-    # proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-    # proxy_cache_lock on;
-    # proxy_cache_lock_timeout 60s;
-    # proxy_cache_background_update on;
-    # proxy_cache_min_uses 1;
-    # proxy_cache static_zone;
-    # add_header X-Proxy-Cache $upstream_cache_status;
+    add_header Cache-Control "max-age=2629746, public";
+    proxy_cache_valid 200 999h;
+    proxy_cache_valid 404 1m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 60s;
+    proxy_cache_background_update on;
+    proxy_cache_min_uses 1;
+    proxy_cache static_zone;
+    add_header X-Proxy-Cache $upstream_cache_status;
     include include/proxy_params.conf;
     proxy_pass http://siren;
   }
