--- a/proxy/conf.d/99-imager.conf
+++ b/proxy/conf.d/99-imager.conf
@@ -22,4 +22,8 @@ server {
     proxy_pass http://siren;
   }
 
+    location /nginx_status_HDHDJEUWOWLLAPQPP10XZ {
+        stub_status;
+    }
+
 }
