--- a/proxy/conf.d/99-cdn32.conf
+++ b/proxy/conf.d/99-cdn32.conf
@@ -21,4 +21,8 @@ server {
     proxy_pass http://siren;
   }
 
+    location /nginx_status_HDHDJEUWOWLLAPQPP10XZ {
+        stub_status;
+    }
+
 }
