--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -6,7 +6,7 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  10000;
 }
 
 http {
@@ -20,6 +20,8 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    tcp_nopush on;
+    types_hash_max_size 2048;
     #tcp_nopush     on;
 
     keepalive_timeout  65;
