--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -6,11 +6,12 @@ upstream do1 {
 
 upstream siren {
     least_conn;
-    server 146.120.56.250;
-    server 146.120.56.251;
-    server 146.120.56.252;
-    server 146.120.56.253;
-    server 146.120.56.254;
-    server 146.120.97.23;
-    server 45.10.90.24;
+    server 146.120.97.19;
+    # server 146.120.56.250;
+    # server 146.120.56.251;
+    # server 146.120.56.252;
+    # server 146.120.56.253;
+    # server 146.120.56.254;
+    # server 146.120.97.23;
+    # server 45.10.90.24;
 }
