--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -6,7 +6,15 @@ upstream do1 {
 
 upstream siren {
     least_conn;
-    server 146.120.97.19;
+    #server 146.120.97.19;
+
+    server 138.68.66.52;
+    server 146.120.56.253;
+    server 146.120.56.252;
+    server 146.120.56.251;
+
+
+
     # server 146.120.56.250;
     # server 146.120.56.251;
     # server 146.120.56.252;
