--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -3,6 +3,11 @@ upstream do1 {
     server 64.225.104.117;
 }
 
+upstream cis {
+    least_conn;
+    server 146.120.56.254;
+    server 188.245.204.119;
+}
 
 upstream siren {
     least_conn;
