--- a/proxy/conf.d/99-service.conf
+++ b/proxy/conf.d/99-service.conf
@@ -4,9 +4,9 @@ server {
 
   location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
     expires 1M;
-    add_header X-Proxy-name "do1-static";
+    add_header X-Proxy-name "service-static";
     #access_log off;
-    access_log /var/log/nginx/do1-static.log upstream_stat;
+    access_log /var/log/nginx/service-static.log upstream_stat;
     # max-age must be in seconds
     add_header Cache-Control "max-age=2629746, public";
     proxy_cache_valid 200 999h;
@@ -19,14 +19,14 @@ server {
     proxy_cache static_zone;
     add_header X-Proxy-Cache $upstream_cache_status;
     include include/proxy_params.conf;
-    proxy_pass http://do1;
+    proxy_pass http://service;
   }
 
   location / {
     #access_log off;
-    access_log /var/log/nginx/do1.log upstream_html;
+    access_log /var/log/nginx/service.log upstream_html;
 
-    add_header X-Proxy-name "do1-root" always;
+    add_header X-Proxy-name "service-root" always;
 
     #proxy_hide_header Cookie;
 
@@ -41,6 +41,32 @@ server {
 
     proxy_read_timeout 120;
     include include/proxy_params.conf;
-    proxy_pass http://do1;
+    proxy_pass http://service;
+  }
+}
+
+server {
+  listen 80;
+  server_name converter.testme.cloud;
+
+  location / {
+     #access_log off;
+    add_header X-Proxy-name "service-converer" always;
+    proxy_read_timeout 1150;
+    include include/proxy_params.conf;
+    proxy_pass http://service;
+  }
+}
+
+server {
+  listen 80;
+  server_name api.mmfilmes.xyz;
+
+  location / {
+     #access_log off;
+    add_header X-Proxy-name "service-converer" always;
+    proxy_read_timeout 1150;
+    include include/proxy_params.conf;
+    proxy_pass http://service;
   }
 }
