--- a/proxy/conf.d/60-imager.conf
+++ b/proxy/conf.d/60-imager.conf
@@ -4,7 +4,7 @@ server {
 
   location / {
     access_log /var/log/nginx/imager.log upstream_stat;
-    add_header X-Proxy-name "siren-imager" always;
+    add_header X-Proxy-name "brazil-imager" always;
     expires 1M;
     # no host in cache key - common fo all sites
     proxy_cache_key "$uri$is_args$args";
@@ -19,7 +19,7 @@ server {
 
     proxy_read_timeout 120;
     include include/proxy_params.conf;
-    proxy_pass http://siren;
+    proxy_pass http://brazil;
   }
 
     location /nginx_status_HDHDJEUWOWLLAPQPP10XZ {
