--- a/proxy/conf.d/60-vbalancer.conf
+++ b/proxy/conf.d/60-vbalancer.conf
@@ -4,15 +4,15 @@ server {
 
   location / {
     access_log /var/log/nginx/vbalancer.log upstream_stat;
-    add_header X-Proxy-name "siren-vbalancer" always;
+    add_header X-Proxy-name "brazil-vbalancer" always;
     proxy_read_timeout 150;
     include include/proxy_params.conf;
-    proxy_pass http://siren;
+    proxy_pass http://brazil;
   }
 
   location /tmdb {
     #expires 24H;
-    add_header X-Proxy-name "siren-vbalancer-tmdb" always;
+    add_header X-Proxy-name "brazil-vbalancer-tmdb" always;
     #access_log off;
     access_log /var/log/nginx/vbalancer-tmdb.log upstream_stat;
     # max-age must be in seconds
@@ -29,7 +29,7 @@ server {
     add_header X-Proxy-Cache $upstream_cache_status;
     proxy_read_timeout 120;
     include include/proxy_params.conf;
-    proxy_pass http://siren;
+    proxy_pass http://brazil;
   }
 
 }
