--- a/proxy/conf.d/99-default.conf
+++ b/proxy/conf.d/99-default.conf
@@ -5,7 +5,7 @@ server {
     # cache static files in templates without domain
     location ~* ^/templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
         expires 10m;
-        add_header X-Proxy-name "siren-static" always;
+        add_header X-Proxy-name "brazil-static" always;
         #access_log off;
         access_log /var/log/nginx/brazil.dle.stat.log upstream_stat;
         # max-age must be in seconds
@@ -21,12 +21,12 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://siren;
+        proxy_pass http://brazil;
     }
 
     location /resize/ {
         expires 10m;
-        add_header X-Proxy-name "siren-resize" always;
+        add_header X-Proxy-name "brazil-resize" always;
         #access_log off;
         access_log /var/log/nginx/resize.log upstream_stat;
         # max-age must be in seconds
@@ -42,13 +42,13 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://siren;
+        proxy_pass http://brazil;
     }
 
 
     location /engine/ajax/controller.php {
         expires 10m;
-        add_header X-Proxy-name "siren-controller" always;
+        add_header X-Proxy-name "brazil-controller" always;
         #access_log off;
         access_log /var/log/nginx/controller.log upstream_stat;
         # max-age must be in seconds
@@ -69,12 +69,12 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://siren;
+        proxy_pass http://brazil;
     }
 
     location /persona/ {
         expires 48h;
-        add_header X-Proxy-name "siren-persona" always;
+        add_header X-Proxy-name "brazil-persona" always;
         #access_log off;
         access_log /var/log/nginx/persona.log upstream_stat;
         # max-age must be in seconds
@@ -95,17 +95,17 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://siren;
+        proxy_pass http://brazil;
     }
 
     location / {
-        access_log /var/log/nginx/siren.log upstream_stat;
+        access_log /var/log/nginx/brazil.log upstream_stat;
 
-        add_header X-Proxy-name "siren-root" always;
+        add_header X-Proxy-name "brazil-root" always;
 
         proxy_read_timeout 3600;
         include include/proxy_params.conf;
-        proxy_pass http://siren;
+        proxy_pass http://brazil;
     }
 
 }
