--- a/proxy/conf.d/60-cdn32.conf
+++ b/proxy/conf.d/60-cdn32.conf
@@ -3,7 +3,7 @@ server {
   server_name cdn32.ntcdn.pro;
 
   location / {
-    add_header X-Proxy-name "siren-cdn32" always;
+    add_header X-Proxy-name "brazil-cdn32" always;
     expires 1M;
     #access_log off;
     access_log /var/log/nginx/cdn32.log upstream_stat;
@@ -18,7 +18,7 @@ server {
     proxy_cache static_zone;
     add_header X-Proxy-Cache $upstream_cache_status;
     include include/proxy_params.conf;
-    proxy_pass http://siren;
+    proxy_pass http://brazil;
   }
 
     location /nginx_status_HDHDJEUWOWLLAPQPP10XZ {
