--- a/proxy/conf.d/50-cis.conf
+++ b/proxy/conf.d/50-cis.conf
@@ -1,12 +1,71 @@
 
+proxy_cache_path /opt/nginx/cis-static levels=1:2 keys_zone=cis_static_zone:10m max_size=1g inactive=3d use_temp_path=off;
+proxy_cache_path /opt/nginx/cis-html levels=1:2 keys_zone=cis_html_zone:10m max_size=1g inactive=3d use_temp_path=off;
+
+
 server {
-  listen 80;
-  server_name kinogo-net.info;
+  listen 8081;
+  server_name _;
+
+    # cache static files in templates without domain
+  location ~* ^/templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
+    expires 10m;
+    add_header X-Proxy-name "cis-static" always;
+    access_log off;
+    proxy_cache_key "$uri$is_args$args";
+    add_header Cache-Control "max-age=2629746, public";
+    proxy_cache_valid 200 1h;
+    proxy_cache_valid 404 1m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 60s;
+    proxy_cache_background_update on;
+    # proxy_cache_min_uses 2;
+    proxy_cache cis_static_zone;
+    add_header X-Proxy-Cache $upstream_cache_status;
+    include include/proxy_params.conf;
+    proxy_pass http://cis;
+  }
+
+  location /engine/ajax/controller.php {
+    expires 10m;
+    add_header X-Proxy-name "cis-controller" always;
+    #access_log off;
+    access_log /var/log/nginx/controller.log upstream_stat;
+    # max-age must be in seconds
+    proxy_cache_key "$uri$is_args$args";
+    #add_header Cache-Control "max-age=2629746, public";
+
+    proxy_ignore_headers X-Accel-Expires;
+    proxy_ignore_headers Expires;
+    proxy_ignore_headers Cache-Control;
+
+    proxy_cache_valid 200 5m;
+    proxy_cache_valid 404 1m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 60s;
+    proxy_cache_background_update on;
+    proxy_cache cis_html_zone;
+    add_header X-Proxy-Cache $upstream_cache_status;
+    include include/proxy_params.conf;
+    proxy_pass http://cis;
+  }
 
   location / {
     add_header X-Proxy-name "cis-root" always;
     #access_log off;
     access_log /var/log/nginx/cis-root.log upstream_html;
+
+    proxy_cache_valid 200 1m;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_lock on;
+    proxy_cache_lock_timeout 60s;
+    proxy_cache_background_update on;
+    proxy_cache cis_html_zone;
+    add_header X-Proxy-Cache $upstream_cache_status;
+
+    proxy_read_timeout 60;
     include include/proxy_params.conf;
     proxy_pass http://cis;
   }
