--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -9,14 +9,20 @@ upstream cis {
     server 45.10.90.24;
 }
 
+upstream india {
+    least_conn;
+    server 146.120.56.250;
+    server 146.120.97.23;
+}
+
 upstream brazil {
     least_conn;
     #server 146.120.97.19;
 
-    server 138.68.66.52;
-    server 146.120.56.253;
-    server 146.120.56.252;
-    server 146.120.56.251;
+    server 138.68.66.52 max_fails=10 fail_timeout=10s;
+    server 146.120.56.253 max_fails=10 fail_timeout=10s;
+    server 146.120.56.252 max_fails=10 fail_timeout=10s;
+    server 146.120.56.251 max_fails=10 fail_timeout=10s;
 
 
 
