--- a/proxy/conf.d/50-cis.conf
+++ b/proxy/conf.d/50-cis.conf
@@ -9,9 +9,10 @@ server {
 
     # cache static files in templates without domain
   location ~* ^/templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
-    expires 10m;
-    add_header X-Proxy-name "cis-static" always;
-    access_log off;
+    expires 24h;
+    add_header X-Proxy-name "cis-dle-static" always;
+    access_log /var/log/nginx/cis-dle-static.log upstream_stat;
+    # access_log off;
     proxy_cache_key "$uri$is_args$args";
     add_header Cache-Control "max-age=2629746, public";
     proxy_cache_valid 200 1h;
@@ -29,9 +30,9 @@ server {
 
   location /engine/ajax/controller.php {
     expires 10m;
-    add_header X-Proxy-name "cis-controller" always;
+    add_header X-Proxy-name "cis-dle-controller" always;
     #access_log off;
-    access_log /var/log/nginx/controller.log upstream_stat;
+    access_log /var/log/nginx/cis-dle-controller.log upstream_stat;
     # max-age must be in seconds
     proxy_cache_key "$uri$is_args$args";
     #add_header Cache-Control "max-age=2629746, public";
@@ -53,9 +54,9 @@ server {
   }
 
   location / {
-    add_header X-Proxy-name "cis-root" always;
+    add_header X-Proxy-name "cis-dle-root" always;
     #access_log off;
-    access_log /var/log/nginx/cis-root.log upstream_html;
+    access_log /var/log/nginx/cis-dle-root.log upstream_html;
 
     proxy_cache_valid 200 1m;
     proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
