--- a/proxy/conf.d/50-service.conf
+++ b/proxy/conf.d/50-service.conf
@@ -57,3 +57,17 @@ server {
     proxy_pass http://service;
   }
 }
+
+server {
+  listen 80;
+  server_name vmanager.testme.cloud;
+
+  location / {
+    #access_log off;
+    access_log /var/log/nginx/vmanager.log upstream_html;
+    add_header X-Proxy-name "service-brazil" always;
+    proxy_read_timeout 1150;
+    include include/proxy_params.conf;
+    proxy_pass http://brazil;
+  }
+}
