--- a/proxy/conf.d/99-default.conf
+++ b/proxy/conf.d/99-default.conf
@@ -2,6 +2,9 @@ server {
     listen 80 default_server;
     server_name _;
 
+    proxy_next_upstream error timeout http_500;
+    proxy_next_upstream_tries 2;
+
     # cache static files in templates without domain
     location ~* ^/templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|htc|woff2|woff|vtt|css|js)$ {
         expires 10m;
