simplify server configurations in 20-upstream.conf by removing failover settings

--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -19,10 +19,10 @@ upstream brazil {
     least_conn;
     #server 146.120.97.19;
 
-    server 138.68.66.52 max_fails=10 fail_timeout=10s;
+    server 138.68.66.52;
     # server 146.120.56.253 max_fails=10 fail_timeout=10s;
-    server 45.10.90.25 max_fails=10 fail_timeout=10s;
-    server 146.120.56.251 max_fails=10 fail_timeout=10s;
+    server 45.10.90.25;
+    server 146.120.56.251;
 
 
 
