enable previously commented upstream server in 20-upstream.conf

--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -20,7 +20,7 @@ upstream brazil {
     #server 146.120.97.19;
 
     server 138.68.66.52; 
-    # server 146.120.56.253;
+    server 146.120.56.253;
     server 45.10.90.25;
     server 146.120.56.251;
     server 146.120.56.252;
