update location block in 99-default.conf to cache static files in templates directory

--- a/proxy/conf.d/99-default.conf
+++ b/proxy/conf.d/99-default.conf
@@ -6,7 +6,7 @@ server {
     proxy_next_upstream_tries 2;
 
     # cache static files in templates without domain
-    location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|webp|htc|woff2|woff|vtt|css|js)$ {
+    location ~* /templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|webp|htc|woff2|woff|vtt|css|js)$ {
         expires 31d;
         add_header X-Proxy-name "brazil-static" always;
         #access_log off;
