update upstream configurations to use brazil-flixproxy and add real client IP mapping

--- a/proxy/conf.d/10-global.conf
+++ b/proxy/conf.d/10-global.conf
@@ -6,3 +6,9 @@ log_format upstream_stat '[$time_local] $upstream_status $upstream_cache_status 
 proxy_cache_path /opt/nginx/static levels=1:2 keys_zone=static_zone:10m max_size=3g inactive=3d use_temp_path=off;
 proxy_cache_path /opt/nginx/html levels=1:2 keys_zone=html_zone:10m max_size=3g inactive=3d use_temp_path=off;
 proxy_cache_key "$host$uri$is_args$args";
+
+# защита от отсутствия заголовка CF-Connecting-IP без него все запросы пойдут на 1 бекенд
+map $http_cf_connecting_ip $real_client_ip {
+    default $http_cf_connecting_ip;
+    ""      $remote_addr;
+}
