--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -5,9 +5,20 @@ upstream service {
 
 upstream brazil {
     least_conn;
+    # hash $real_client_ip consistent;
     server 138.68.66.52; 
     server 146.120.56.253;
     server 45.10.90.25;
     server 146.120.56.251;
     server 146.120.56.252;
+}
+
+upstream brazil-flixproxy {
+    # least_conn;
+    hash $real_client_ip consistent;
+    server 138.68.66.52:54621; 
+    server 146.120.56.253:54621;
+    server 45.10.90.25:54621;
+    server 146.120.56.251:54621;
+    server 146.120.56.252:54621;
 }
