--- a/proxy/conf.d/99-default.conf
+++ b/proxy/conf.d/99-default.conf
@@ -24,7 +24,7 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil-flixproxy;
+        proxy_pass http://brazil;
     }
 
     location /resize/ {
@@ -72,7 +72,7 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil-flixproxy;
+        proxy_pass http://brazil;
     }
 
     location /persona/ {
@@ -98,7 +98,7 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil-flixproxy;
+        proxy_pass http://brazil;
     }
 
     location / {
@@ -108,7 +108,7 @@ server {
 
         proxy_read_timeout 20;
         include include/proxy_params.conf;
-        proxy_pass http://brazil-flixproxy;
+        proxy_pass http://brazil;
     }
 
 }
