add configuration for topflix.ac with proxy settings and caching rules

--- a/proxy/conf.d/90-topflix.ac.conf
+++ b/proxy/conf.d/90-topflix.ac.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name seriesflixbr.me;
+    server_name topflix.ac seriesflixbr.me;
 
     proxy_next_upstream error timeout http_500;
     proxy_next_upstream_tries 2;
@@ -8,9 +8,9 @@ server {
     # cache static files in templates without domain
     location ~* /templates/.*\.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|mp3|ogg|ogv|webm|webp|htc|woff2|woff|vtt|css|js)$ {
         expires 31d;
-        add_header X-Proxy-name "brazil-static" always;
+        add_header X-Proxy-name "brazil-flixproxy-static" always;
         #access_log off;
-        access_log /var/log/nginx/brazil.dle.stat.log upstream_stat;
+        access_log /var/log/nginx/brazil.flixproxy.stat.log upstream_stat;
         # max-age must be in seconds
         proxy_cache_key "$uri$is_args$args";
         # add_header Cache-Control "max-age=2629746, public";
@@ -24,14 +24,14 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil;
+        proxy_pass http://brazil-flixproxy;
     }
 
     location /resize/ {
         expires 31d;
-        add_header X-Proxy-name "brazil-resize" always;
+        add_header X-Proxy-name "brazil-flixproxy-resize" always;
         #access_log off;
-        access_log /var/log/nginx/resize.log upstream_stat;
+        access_log /var/log/nginx/resize.flixproxy.log upstream_stat;
         # max-age must be in seconds
         proxy_cache_key "$uri$is_args$args";
         add_header Cache-Control "max-age=2629746, public";
@@ -45,15 +45,15 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil;
+        proxy_pass http://brazil-flixproxy;
     }
 
 
     location /engine/ajax/controller.php {
         expires 10m;
-        add_header X-Proxy-name "brazil-controller" always;
+        add_header X-Proxy-name "brazil-flixproxy-controller" always;
         #access_log off;
-        access_log /var/log/nginx/controller.log upstream_stat;
+        access_log /var/log/nginx/controller.flixproxy.log upstream_stat;
         # max-age must be in seconds
         proxy_cache_key "$uri$is_args$args";
         #add_header Cache-Control "max-age=2629746, public";
@@ -72,14 +72,14 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil;
+        proxy_pass http://brazil-flixproxy;
     }
 
     location /persona/ {
         expires 48h;
-        add_header X-Proxy-name "brazil-persona" always;
+        add_header X-Proxy-name "brazil-flixproxy-persona" always;
         #access_log off;
-        access_log /var/log/nginx/persona.log upstream_stat;
+        access_log /var/log/nginx/persona.flixproxy.log upstream_stat;
         # max-age must be in seconds
         proxy_cache_key "$host$uri$is_args$args";
         #add_header Cache-Control "max-age=2629746, public";
@@ -98,13 +98,13 @@ server {
         proxy_cache html_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil;
+        proxy_pass http://brazil-flixproxy;
     }
 
     location / {
-        access_log /var/log/nginx/brazil-seriesflixbr.me.log upstream_stat;
+        access_log /var/log/nginx/brazil.flixproxy.log upstream_stat;
 
-        add_header X-Proxy-name "brazil-seriesflix" always;
+        add_header X-Proxy-name "brazil-flixproxy" always;
 
         proxy_read_timeout 40;
         include include/proxy_params.conf;
