--- a/proxy/conf.d/90-topflix.ac.conf
+++ b/proxy/conf.d/90-topflix.ac.conf
@@ -45,7 +45,7 @@ server {
         proxy_cache static_zone;
         add_header X-Proxy-Cache-Status $upstream_cache_status;
         include include/proxy_params.conf;
-        proxy_pass http://brazil-flixproxy;
+        proxy_pass http://brazil;
     }
 
 
