add configuration for topflix.watch with proxy settings and caching rules

--- a/proxy/conf.d/90-topflix.conf
+++ b/proxy/conf.d/90-topflix.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name topflix.ac seriesflixbr.me;
+    server_name topflix.watch seriesflixbr.me;
 
     proxy_next_upstream error timeout http_500;
     proxy_next_upstream_tries 2;
