--- a/proxy/conf.d/20-upstream.conf
+++ b/proxy/conf.d/20-upstream.conf
@@ -6,29 +6,26 @@ upstream service {
 upstream brazil {
     least_conn;
     # hash $real_client_ip consistent;
-    # server 138.68.66.52; 
     server 146.120.56.253;
     server 45.10.90.25;
-    # server 146.120.56.251;
+    server 31.128.246.28;
     server 146.120.56.252;
 }
 
 upstream brazil-ported {
     least_conn;
     # hash $real_client_ip consistent;
-    # server 138.68.66.52:56624; 
     server 146.120.56.253:56624;
     server 45.10.90.25:56624;
-    # server 146.120.56.251:56624;
+    server 31.128.246.28:56624;
     server 146.120.56.252:56624;
 }
 
 upstream brazil-flixproxy {
     # least_conn;
     hash $real_client_ip consistent;
-    # server 138.68.66.52:54621; 
     server 146.120.56.253:54621;
     server 45.10.90.25:54621;
-    # server 146.120.56.251:54621;
+    server 31.128.246.28:54621;
     server 146.120.56.252:54621;
 }
